# credentials

./: .buildinfo  analytics.html  asset_pipeline.html  bower.json  codecov.yml  configuring_certificates.html  credentials_admin.html  credentials_api.html  decisions.html  edx_extensions.html  event_bus.html  genindex.html  getting_started.html  index.html  internationalization.html  learner_records.html  lms_user_id.html  objects.inv  overview.html  package-lock.json  package.json  pathways.html  program_completion_emails.html  program_records.html  pyproject.toml  search.html  searchindex.js  setup.py  testing.html  theming.html
.doctrees/: analytics.doctree  asset_pipeline.doctree  configuring_certificates.doctree  credentials_admin.doctree  credentials_api.doctree  decisions.doctree  edx_extensions.doctree  environment.pickle  event_bus.doctree  getting_started.doctree  index.doctree  internationalization.doctree  learner_records.doctree  lms_user_id.doctree  overview.doctree  pathways.doctree  program_completion_emails.doctree  program_records.doctree  testing.doctree  theming.doctree
.doctrees/badges/: _details.doctree  _distribution.doctree  configuration.doctree  examples.doctree  index.doctree  processing.doctree  quickstart.doctree  settings.doctree
.doctrees/decisions/: 0001-record-architecture-decisions.doctree  0002-front-end-technologies.doctree  0003-copy-core-data-locally.doctree  0004-filter-lms-side.doctree  0005-program-id-in-usercreditpathway.doctree  0006-plugin-extensions.doctree  0007-learner-status-endpoint.doctree  0008-verifiable-credentials-issuing.doctree  0009-issue-verifiable-credentails-in-learner-records-mfe.doctree
.doctrees/verifiable_credentials/: components.doctree  configuration.doctree  (+6 more)
badges/: _details.html  _distribution.html  configuration.html  examples.html  index.html  processing.html  quickstart.html  settings.html
credentials/: urls.py  utils.py
credentials/apps/badges/distribution/credly/: pyproject.toml
credentials/apps/badges/distribution/credly/credly_badges/: __init__.py  admin.py  api_client.py  apps.py  checks.py  data.py  exceptions.py  forms.py  models.py  rest_api.py  toggles.py  urls.py  utils.py
credentials/apps/badges/distribution/credly/credly_badges/management/commands/: sync_organization_badge_templates.py
credentials/apps/badges/distribution/credly/credly_badges/migrations/: 0002_alter_credlyorganization_api_key_and_more.py  0003_credlybadgetemplate_state_and_more.py  0004_credlybadge.py  0005_auto_20240327_1118.py  0006_rename_credlybadgecredential_credlybadge.py
credentials/apps/badges/distribution/credly/credly_badges/requirements/: base.in
credentials/apps/badges/distribution/credly/credly_badges/settings/: base.py  production.py  test.py
credentials/apps/badges/distribution/credly/credly_badges/signals/: handlers.py
credentials/apps/badges/distribution/credly/requirements/: base.in
decisions/: 0001-record-architecture-decisions.html  0002-front-end-technologies.html  0003-copy-core-data-locally.html  0004-filter-lms-side.html  0005-program-id-in-usercreditpathway.html  0006-plugin-extensions.html  0007-learner-status-endpoint.html  0008-verifiable-credentials-issuing.html  0009-issue-verifiable-credentails-in-learner-records-mfe.html
docs/: Makefile  index.rst
logo_compare/: csv2html.py  data.sql  index.html  logos.csv  logos.xlsx
requirements/: all.txt  base.in  base.txt  common_constraints.txt  dev.txt  docs.txt  local.txt  optional.txt  pip.txt  production.txt  test.in  test.txt
verifiable_credentials/: components.html  configuration.html  extensibility.html  overview.html  quickstart.html  storages.html  tech_details.html  usage.html
(+347 files in other folders)
