[build-system]
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
name = "openedx-badges-credly"
authors = [
    { name = "Kyrylo Kholodenko", email = "kyrylo.kholodenko@raccoongang.com" },
    { name = "Volodymyr Bergman", email = "volodymyr.bergman@raccoongang.com" },
]
description = "Open edX Credentials plugin - Badges app extension for Credly (by Pearson) service."
readme = "README.rst"
requires-python = ">=3.8"
keywords = ["credentials", "badges", "credly"]
license = { file = "LICENSE.txt" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Framework :: Django :: 4",
]
dynamic = ["version", "dependencies", "optional-dependencies"]

[project.entry-points."credentials.djangoapp"]
credly_badges = "credly_badges.apps:CredlyBadgesConfig"

[project.urls]
Repository = "https://github.com/openedx/credentials.git"

[tool.setuptools]
packages = ["credly_badges"]

[tool.setuptools.dynamic]
version = { attr = "credly_badges.__version__" }
dependencies = { file = "requirements/base.in" }

[tool.ruff]
# https://docs.astral.sh/ruff/configuration/
line-length = 120
exclude = ["migrations"]

[tool.ruff.lint]
# https://docs.astral.sh/ruff/configuration/

[tool.ruff.lint.per-file-ignores]
"**/{tests,docs,tools}/*" = ["E402"]
"credly_badges/admin.py" = ["F403"]
"credly_badges/models.py" = ["F403"]
"credly_badges/signals.py" = ["F403"]

[tool.ruff.format]
# https://docs.astral.sh/ruff/configuration/
exclude = ["*.pyi"]

[tool.pytest.ini_options]
# https://docs.pytest.org/en/stable/reference/customize.html
# https://pytest-cov.readthedocs.io/en/latest/config.html
# https://pytest-django.readthedocs.io/en/latest/managing_python_path.html
DJANGO_SETTINGS_MODULE = "credly_badges.settings.test"
pythonpath = ". credly_badges"
python_files = "test_*.py"
addopts = [
    "-p no:warnings",
    "--strict-markers",
    "--no-migrations",
    "--reuse-db",
    "--cov=credly_badges",
    "--cov-report=term",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.coverage.run]
# https://coverage.readthedocs.io/en/latest/config.html
omit = ["*/migrations/*"]
